[package]
name = "rusty-reactor"
version = "0.1.0"
edition = "2024"
authors = ["Ben West"]
description = "A learning playground for rust based on a nuclear powerplant"
readme = "README.md"
license = "MIT"
repository = "https://github.com/West-DevOps/rusty-reactor"
categories = ["learning"]


[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
log = "0.4.27"
log4rs = { version = "1.3.0", features = ["all_components"] }
rand = "0.9.2"
