[package]
name = "rusty-reactor"
version = "0.3.0"
edition = "2024"
authors = ["Ben West"]
description = "A learning playground for rust based on a nuclear powerplant"
readme = "README.md"
license = "MIT"
repository = "https://github.com/West-DevOps/rusty-reactor"
categories = ["science"]


[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rand = "0.9.2"
